--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 asgiref==3.7.2
 distlib==0.3.8
-Django==5.0.0
+Django==5.0
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
 filelock==3.13.1
 gunicorn==21.2.0
 packaging==23.2
 platformdirs==4.2.0
+pytz==2024.1
 sqlparse==0.4.4
 tzdata==2024.1
 virtualenv==20.25.0
